--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.4",
     "graphql-tools": "^4.0.5",
