--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.4",
     "graphql-tools": "^4.0.5",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.2"
   },
   "devDependencies": {
